UI issue fixed where editor was too wide, sample-config.js added to help understanding config file format. Some Firebase files added to .gitignore.

--- a/src/scss/_editor.scss
+++ b/src/scss/_editor.scss
@@ -3,25 +3,33 @@
   border-top-right-radius: 10px;
   height: 100%;
   overflow-y: auto;
-  background: $darker-color-highlight;
-  .area {
-    background: $darker-color-highlight;
-    border-top-right-radius: 10px;
-    padding: 16px;
-    min-height: 100%;
-    height: 100%;
-    cursor: text;
-  }
-  .DraftEditor-root {
 
+  .editor-container {
     border-top-right-radius: 10px;
-    color: #FFF;
+    display:block;
+    background: $darker-color-highlight;
     min-height: 100%;
     height: 100%;
-    
-    .public-DraftEditor-content {
+
+    .area {
+      background: $darker-color-highlight;
+      border-top-right-radius: 10px;
+      padding: 16px;
       min-height: 100%;
       height: 100%;
+      cursor: text;
+
+      .DraftEditor-root {
+        border-top-right-radius: 10px;
+        color: #FFF;
+        min-height: 100%;
+        height: 100%;
+        
+        .public-DraftEditor-content {
+          min-height: 100%;
+          height: 100%;
+        }
+      }
     }
   }
 }
